--- a/LibCSV/LibCSV.csproj
+++ b/LibCSV/LibCSV.csproj
@@ -40,13 +40,15 @@
     <Compile Include="Exceptions\DialectIsNullException.cs" />
     <Compile Include="Exceptions\FieldIsNullException.cs" />
     <Compile Include="Exceptions\TextReaderIsNullException.cs" />
-    <Compile Include="IResultTransformer.cs" />
+    <Compile Include="IDataTransformer.cs" />
     <Compile Include="ParserState.cs" />
     <Compile Include="QuoteStyle.cs" />
     <Compile Include="StyleDesc.cs" />
     <Compile Include="Dialects\Dialect.cs" />
     <Compile Include="CSVReader.cs" />
     <Compile Include="CSVAdapter.cs" />
+    <Compile Include="CSVWriter.cs" />
+    <Compile Include="Exceptions\WriterException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
