--- a/LibCSV/LibCSV.csproj
+++ b/LibCSV/LibCSV.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="AssemblyVersion.cs" />
     <Compile Include="Exceptions\BadFormatException.cs" />
     <Compile Include="Exceptions\ReaderException.cs" />
     <Compile Include="Exceptions\DialectInternalErrorException.cs" />
