Fixed nuspec for the nuget package and updated documentation (added goal section).

--- a/LibCSV/LibCSV.nuspec
+++ b/LibCSV/LibCSV.nuspec
@@ -10,7 +10,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Library for reading and writing tabular (CSV) files.</description>
     <releaseNotes>Added nuget package.</releaseNotes>
-    <copyright>Copyright 2011-2013</copyright>
+    <copyright>Darius Kucinskas(c) 2011-2013</copyright>
     <tags>csv</tags>
   </metadata>
   <files>
