--- a/LibCSV/LibCSV.csproj
+++ b/LibCSV/LibCSV.csproj
@@ -50,6 +50,11 @@
     <Compile Include="CSVAdapter.cs" />
     <Compile Include="CSVWriter.cs" />
     <Compile Include="Exceptions\WriterException.cs" />
+    <Compile Include="Exceptions\CSVException.cs" />
+    <Compile Include="Exceptions\HeaderIsNullException.cs" />
+    <Compile Include="Exceptions\DataTransformerIsNullException.cs" />
+    <Compile Include="Exceptions\NotEqualCellCountInRowsException.cs" />
+    <Compile Include="Exceptions\CannotConvertValueToRequestType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
