--- a/LibCSV/LibCSV.csproj
+++ b/LibCSV/LibCSV.csproj
@@ -10,10 +10,17 @@
     <RootNamespace>LibCSV</RootNamespace>
     <AssemblyName>LibCSV</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <NoWin32Manifest>False</NoWin32Manifest>
+    <SignAssembly>False</SignAssembly>
+    <DelaySign>False</DelaySign>
+    <AllowUnsafeBlocks>False</AllowUnsafeBlocks>
+    <NoStdLib>False</NoStdLib>
+    <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
+    <IntermediateOutputPath>obj\$(Configuration)\</IntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
-    <DebugType>full</DebugType>
+    <DebugType>Full</DebugType>
     <Optimize>False</Optimize>
     <OutputPath>bin\Debug</OutputPath>
     <DefineConstants>DEBUG</DefineConstants>
@@ -29,6 +36,17 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>False</ConsolePause>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
+    <BaseIntermediateOutputPath>obj\</BaseIntermediateOutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Platform)' == 'AnyCPU' ">
+    <BaseAddress>4194304</BaseAddress>
+    <PlatformTarget>x86</PlatformTarget>
+    <RegisterForComInterop>False</RegisterForComInterop>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
+    <FileAlignment>4096</FileAlignment>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
@@ -36,25 +54,24 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="AssemblyVersion.cs" />
     <Compile Include="Exceptions\BadFormatException.cs" />
-    <Compile Include="Exceptions\ReaderException.cs" />
+    <Compile Include="Exceptions\CannotReadFromFileException.cs" />
+    <Compile Include="Exceptions\CannotWriteToFileException.cs" />
+    <Compile Include="Exceptions\FileNameIsNullOrEmptyException.cs" />
     <Compile Include="Exceptions\DialectInternalErrorException.cs" />
     <Compile Include="Exceptions\DialectIsNullException.cs" />
-    <Compile Include="Exceptions\FieldIsNullException.cs" />
+    <Compile Include="Exceptions\RowIsNullOrEmptyException.cs" />
     <Compile Include="Exceptions\TextReaderIsNullException.cs" />
     <Compile Include="IDataTransformer.cs" />
     <Compile Include="ParserState.cs" />
     <Compile Include="QuoteStyle.cs" />
-    <Compile Include="StyleDesc.cs" />
     <Compile Include="Dialects\Dialect.cs" />
     <Compile Include="CSVReader.cs" />
     <Compile Include="CSVAdapter.cs" />
     <Compile Include="CSVWriter.cs" />
-    <Compile Include="Exceptions\WriterException.cs" />
     <Compile Include="Exceptions\CSVException.cs" />
     <Compile Include="Exceptions\HeaderIsNullException.cs" />
     <Compile Include="Exceptions\DataTransformerIsNullException.cs" />
     <Compile Include="Exceptions\NotEqualCellCountInRowsException.cs" />
-    <Compile Include="Exceptions\CannotConvertValueToRequestType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
