--- a/LibCSV/LibCSV.csproj
+++ b/LibCSV/LibCSV.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Exceptions\DialectIsNullException.cs" />
     <Compile Include="Exceptions\RowIsNullOrEmptyException.cs" />
     <Compile Include="Exceptions\TextReaderIsNullException.cs" />
+    <Compile Include="ICSVReader.cs" />
+    <Compile Include="ICSVWriter.cs" />
     <Compile Include="IDataTransformer.cs" />
     <Compile Include="ParserState.cs" />
     <Compile Include="QuoteStyle.cs" />
