Fixed issue #14 It would be nice to have a possibility to pass IFormatProbider for CsvWriter to convert objects to strings with desired format. Now you could provide CultureInfo into CsvWriter constructor and it will be used for formatting of all Convertible(s) (IConvertible).

--- a/LibCSV/LibCSV.csproj
+++ b/LibCSV/LibCSV.csproj
@@ -77,11 +77,12 @@
     <Compile Include="Dialects\Dialect.cs" />
     <Compile Include="CSVReader.cs" />
     <Compile Include="CSVAdapter.cs" />
-    <Compile Include="CSVWriter.cs" />
     <Compile Include="Exceptions\CSVException.cs" />
     <Compile Include="Exceptions\HeaderIsNullException.cs" />
     <Compile Include="Exceptions\DataTransformerIsNullException.cs" />
     <Compile Include="Exceptions\NotEqualCellCountInRowsException.cs" />
+    <Compile Include="TypeSwitch.cs" />
+    <Compile Include="CSVWriter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
