--- a/LibCSV/LibCSV.csproj
+++ b/LibCSV/LibCSV.csproj
@@ -5,7 +5,7 @@
     <Company></Company>
     <Product>LibCSV</Product>
     <Description>Library for reading and writing tabular (CSV) files.</Description>
-    <Copyright>Logistical Labs ©2011-2018</Copyright>
+    <Copyright>Copyright © 2011-2018, Darius Kucinskas and Contributors</Copyright>
     <Version>2.0.0.0</Version>
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
