--- a/LibCSV.Tests.NetCore/LibCSV.Tests.NetCore.csproj
+++ b/LibCSV.Tests.NetCore/LibCSV.Tests.NetCore.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <OutputType>Library</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <OutputTypeEx>library</OutputTypeEx>
+    <LangVersion>latest</LangVersion>
+    <StartupObject>LibCSV.Tests.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\LibCSV.Tests.NetFramework\AdapterTests.cs" Link="AdapterTests.cs" />
@@ -20,9 +24,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
-    <PackageReference Include="NUnit" Version="3.9.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.9.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="NUnit" Version="3.13.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LibCSV\LibCSV.csproj" />
